<resources>
    <string name="app_name">SMS App</string>
    <string name="b1">Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται
μετά από σχετική επικοινωνία.</string>
    <string name="b2">Μετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης
ανάγκης, όπου δεν είναι δυνατή η αποστολή τους.</string>
    <string name="b3">Μετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης
ανάγκης, όπου δεν είναι δυνατή η αποστολή τους.</string>
    <string name="b4">Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη.</string>
    <string name="b5">Μετάβαση σε τελετή (π.χ. κηδεία, γάμος, βάφτιση) υπό τους όρους που
προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε
διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και
τέκνων, σύμφωνα με τις κείμενες διατάξεις.</string>
    <string name="b6">Σύντομη μετακίνηση, κοντά στην κατοικία μου, για ατομική σωματική
άσκηση (εξαιρείται οποιαδήποτε συλλογική αθλητική δραστηριότητα) ή για τις
ανάγκες κατοικιδίου ζώου.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
