<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StageTwoFragment">

    <!-- TODO: Update blank fragment layout -->
    <RadioGroup
        android:id="@+id/StageTwoFragment_radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/StageTwoFragment_radio_b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:tag="1"
            android:text="@string/b1" />

        <RadioButton
            android:id="@+id/StageTwoFragment_radio_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:tag="2"
            android:text="@string/b2" />

        <RadioButton
            android:id="@+id/StageTwoFragment_radio_b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:tag="3"
            android:text="@string/b3" />

        <RadioButton
            android:id="@+id/StageTwoFragment_radio_b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:tag="4"
            android:text="@string/b4" />

        <RadioButton
            android:id="@+id/StageTwoFragment_radio_b5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:tag="5"
            android:text="@string/b5" />

        <RadioButton
            android:id="@+id/StageTwoFragment_radio_b6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:tag="6"
            android:text="@string/b6" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>